# approximation-redux

./: .gitignore  CMakeLists.txt  README.md  approximation.cpp  approximation.h  component.h  constants.h  controller.cpp  controller.h  eos.cpp  eos.h  equations_of_states.h  json.h  json_builder.h  json_parser.cpp  json_parser.h  main.cpp  plot.gp  plotter.cpp  plotter.h  solution.cpp  solution.h  solution_data.json  solution_properties.h  test.h  utilities.cpp  utilities.h  utility.h
include/: approximation.h  constants.h  controller.h  eos.h  json.h  plotter.h  solution.h  solution_properties.h  utilities.h
include/application/: approximation_range_service.h  error_analysis_service.h  json_result_writer.h  k_value_range_service.h  phase_pair_factory.h  requests.h  thermo_range_service.h
include/model/: approximation.h  eos.h  k_value_calculator.h  mixture_properties.h  results.h  solution.h  solution_properties.h  thermo_calculator.h  utilities.h  z_factor_selector.h
include/view/: matplot_renderer.h  plot_file_name_formatter.h  plot_spec.h  plot_styles.h
src/: controller.cpp  json.cpp  json_builder.cpp  main.cpp  plotter.cpp
src/application/: approximation_range_service.cpp  error_analysis_service.cpp  json_result_writer.cpp  k_value_range_service.cpp  phase_pair_factory.cpp  thermo_range_service.cpp
src/model/: approximation.cpp  k_value_calculator.cpp  mixture_properties.cpp  solution.cpp  thermo_calculator.cpp  utilities.cpp  z_factor_selector.cpp
src/view/: matplot_renderer.cpp  plot_file_name_formatter.cpp
